--- a/css/main.css
+++ b/css/main.css
@@ -1942,7 +1942,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ff0b32;
+  background: #cd90a2;
 }
 .links-of-blogroll {
   font-size: 13px;
